:recycle: s3-integration refactor security