@@ -1,22 +1,18 @@
-package de.muenchen.refarch.spring.security.userinfo;
+package de.muenchen.refarch.s3.integration.configuration;
 
 import com.github.benmanes.caffeine.cache.Caffeine;
 import com.github.benmanes.caffeine.cache.Ticker;
-import de.muenchen.refarch.spring.security.JwtClaims;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.boot.web.client.RestTemplateBuilder;
 import org.springframework.cache.Cache;
 import org.springframework.cache.Cache.ValueWrapper;
 import org.springframework.cache.caffeine.CaffeineCache;
-import org.springframework.core.convert.converter.Converter;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
@@ -27,25 +23,21 @@ import org.springframework.util.ObjectUtils;
 import org.springframework.web.client.RestTemplate;
 
 /**
- * Service, der einen OIDC /userinfo Endpoint aufruft (mit JWT Bearer Auth) und dort die enthaltenen "authorities" und "user_roles" extrahiert.
+ * Service that calls an OIDC /userinfo endpoint (with JWT Bearer Auth) and extracts the contained "Authorities".
  */
 @Slf4j
-public class UserInfoAuthoritiesConverter implements Converter<Jwt, Collection<GrantedAuthority>> {
+public class UserInfoAuthoritiesService {
 
     private static final String NAME_AUTHENTICATION_CACHE = "authentication_cache";
     private static final int AUTHENTICATION_CACHE_ENTRY_SECONDS_TO_EXPIRE = 60;
+
+    private static final String CLAIM_AUTHORITIES = "authorities";
 
     private final String userInfoUri;
     private final RestTemplate restTemplate;
     private final Cache cache;
 
-    /**
-     * Erzeugt eine neue Instanz.
-     *
-     * @param userInfoUri         userinfo Endpoint URI
-     * @param restTemplateBuilder ein {@link RestTemplateBuilder}
-     */
-    public UserInfoAuthoritiesConverter(final String userInfoUri, final RestTemplateBuilder restTemplateBuilder) {
+    public UserInfoAuthoritiesService(String userInfoUri, RestTemplateBuilder restTemplateBuilder) {
         this.userInfoUri = userInfoUri;
         this.restTemplate = restTemplateBuilder.build();
         this.cache = new CaffeineCache(NAME_AUTHENTICATION_CACHE,
@@ -55,8 +47,8 @@ public class UserInfoAuthoritiesConverter implements Converter<Jwt, Collection<G
                         .build());
     }
 
-    private static List<GrantedAuthority> asAuthorities(Object object) {
-        final List<GrantedAuthority> authorities = new ArrayList<>();
+    private static List<SimpleGrantedAuthority> asAuthorities(Object object) {
+        List<SimpleGrantedAuthority> authorities = new ArrayList<>();
         if (object instanceof Collection<?> collection) {
             object = collection.toArray(new Object[0]);
         }
@@ -65,27 +57,23 @@ public class UserInfoAuthoritiesConverter implements Converter<Jwt, Collection<G
                     Stream.of(((Object[]) object))
                             .map(Object::toString)
                             .map(SimpleGrantedAuthority::new)
-                            .collect(Collectors.toList()));
+                            .toList());
         }
         return authorities;
     }
 
-    @Override
-    public Collection<GrantedAuthority> convert(@NonNull Jwt source) {
-        return loadAuthorities(source);
-    }
-
     /**
-     * Ruft den /userinfo Endpoint und extrahiert {@link GrantedAuthority}s aus dem "authorities" Claim und roles aus dem "user_roles" claim.
+     * Calls the /userinfo endpoint and extracts {@link GrantedAuthority}s from the "authorities" claim.
      *
-     * @param jwt der JWT
-     * @return die {@link GrantedAuthority}s gem. Claim "authorities" des /userinfo Endpoints
+     * @param jwt the JWT
+     * @return the {@link GrantedAuthority}s according to the "authorities" claim of the /userinfo endpoint
      */
-    public Collection<GrantedAuthority> loadAuthorities(final Jwt jwt) {
-        final ValueWrapper valueWrapper = this.cache.get(jwt.getSubject());
+    public Collection<SimpleGrantedAuthority> loadAuthorities(Jwt jwt) {
+        ValueWrapper valueWrapper = this.cache.get(jwt.getSubject());
         if (valueWrapper != null) {
             // value present in cache
-            @SuppressWarnings("unchecked") final Collection<GrantedAuthority> authorities = (Collection<GrantedAuthority>) valueWrapper.get();
+            @SuppressWarnings("unchecked")
+            Collection<SimpleGrantedAuthority> authorities = (Collection<SimpleGrantedAuthority>) valueWrapper.get();
             log.debug("Resolved authorities (from cache): {}", authorities);
             return authorities;
         }
@@ -94,23 +82,25 @@ public class UserInfoAuthoritiesConverter implements Converter<Jwt, Collection<G
         final HttpHeaders headers = new HttpHeaders();
         headers.set(HttpHeaders.AUTHORIZATION, "Bearer " + jwt.getTokenValue());
         final HttpEntity<String> entity = new HttpEntity<>(headers);
-        Collection<GrantedAuthority> authorities = new ArrayList<>();
+
+        Collection<SimpleGrantedAuthority> authorities = new ArrayList<>();
         try {
-            @SuppressWarnings("unchecked") final Map<String, Object> map = this.restTemplate.exchange(this.userInfoUri, HttpMethod.GET, entity, Map.class)
-                    .getBody();
+            @SuppressWarnings("unchecked")
+            Map<String, Object> map = restTemplate.exchange(this.userInfoUri, HttpMethod.GET, entity,
+                    Map.class).getBody();
+
             log.debug("Response from user-info Endpoint: {}", map);
-            if (map != null && map.containsKey(JwtClaims.AUTHORITIES)) {
-                authorities.addAll(asAuthorities(map.get(JwtClaims.AUTHORITIES)));
-            }
-            if (map != null && map.containsKey(JwtClaims.ROLES)) {
-                authorities.addAll(asAuthorities(map.get(JwtClaims.ROLES)));
+            if (map.containsKey(CLAIM_AUTHORITIES)) {
+                authorities = asAuthorities(map.get(CLAIM_AUTHORITIES));
             }
             log.debug("Resolved Authorities (from /userinfo Endpoint): {}", authorities);
             // store
             this.cache.put(jwt.getSubject(), authorities);
-        } catch (final Exception e) {
-            log.error(String.format("Could not fetch user details from %s - user is granted NO authorities", this.userInfoUri), e);
+        } catch (Exception e) {
+            log.error(String.format("Could not fetch user details from %s - user is granted NO authorities",
+                    this.userInfoUri), e);
         }
+
         return authorities;
     }
 
